# FILE_SYNC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  log.txt
include/: config.h  inotify_monitor.h  logger.h  monitor.h  polling_monitor.h  scanner.h  syncer.h
src/: config.cpp  inotify_monitor.cpp  logger.cpp  main.cpp  monitor.cpp  polling_monitor.cpp  scanner.cpp  syncer.cpp
